# testhelper

./: .drone.yml  cmakefile.py  configurator.py  createTest.py  ioworks.py  parser.py  testfile.py  tests.py  utils.py
.ropeproject/: config.py  globalnames
_testTemplate/: CMakeLists.txt  CMakeLists.txt.orig  config.conf  main.cpp  test.cpp
helpers/: assets.py
test/: compare.txt  testcompare.cpp  tests.py
tests/: CMakeLists.txt  test.cpp  testcompare.cpp  tests.py
tests/TestAddSubdirectory/assets/: addsubcompare.txt
tests/TestCmakeFile/assets/: CMakeLists.txt
tests/Testfile/: testfile.cpp
tests/Testfile/assets/: testfile.cpp
tests/grouped/testing_test/: test.cpp
